apps/nas/hermes-agent/httproute-private.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes-agent-private
  namespace: hermes-agent
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
    sectionName: wahooli-https
  hostnames:
  - "hermes.${domain_wahoo_li:=wahoo.li}"
  rules:
  - filters:
    - type: URLRewrite
      urlRewrite:
        hostname: hermes-agent.hermes-agent.svc.cluster.local
    backendRefs:
    - name: hermes-agent
      port: 80
    timeouts:
      request: 300s
      backendRequest: 300s
